fix: Align remove button with label text

--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -14,6 +14,8 @@
   font-family: $bp-ff;
   font-size: $bp-fs-6;
   align-self: center;
+  position: relative;
+  z-index: 1;
 
   &:focus { outline: none; }
 }
