--- a/src/scss/components/_tag.scss
+++ b/src/scss/components/_tag.scss
@@ -11,7 +11,7 @@
   margin: 0;
   width: 149px;
   position: absolute;
-  top: 140%;
+  top: 160%;
   line-height: 1;
   border-radius: 3px;
   transform-origin: 0 0;
@@ -37,9 +37,9 @@
 }
 
 .blip-tag {
-  display: inline-block;
-  padding: 4px 15px;
-  margin-top: 4px;
+  @include flex-box;
+  padding: 7px 15px;
+  margin: 4px 0;
   border-radius: 20px;
   background: $bp-color-bot;
   max-width: 300px;
@@ -57,6 +57,10 @@
       background: $bp-color-rooftop !important; // Tags background is set inline, so !important is necessary
     }
   }
+}
+
+.blip-tag-wrapper {
+  position: relative;
 }
 
 .blip-tag--compact {
@@ -88,6 +92,7 @@
   height: auto;
   min-width: auto;
   padding: 0;
+  margin-left: 7px;
   line-height: 1;
   color: #fff;
 
